qrogue/game/world/dungeon_generator/other_parsers/basics_parser/QrogueBasicsParser.py
# Generated from D:/Documents/pycharm_workspace/Qrogue/qrogue/game/world/dungeon_generator/other_parsers\QrogueBasics.g4 by ANTLR 4.10.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys


class QrogueBasicsParser ( Parser ):

    grammarFileName = "QrogueBasics.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"'Qrogue<'", u"'>Qrogue'", 
                     u"'~'", u"'|'", u"','", u"'#'", u"'..'", u"'__'" ]

    symbolicNames = [ u"<INVALID>", u"DIRECTION", u"HEADER", u"ENDER", u"HORIZONTAL_SEPARATOR", 
                      u"VERTICAL_SEPARATOR", u"LIST_SEPARATOR", u"WALL", 
                      u"EMPTY_HALLWAY", u"EMPTY_ROOM", u"DIGIT", u"INTEGER", 
                      u"FLOAT", u"IMAG_NUMBER", u"SIGN", u"CHARACTER_LOW", 
                      u"CHARACTER_UP", u"CHARACTER", u"TEXT", u"ROOM_ID", 
                      u"HALLWAY_ID", u"REFERENCE", u"WS", u"UNIVERSAL_SEPARATOR", 
                      u"COMMENT", u"LINE_COMMENT" ]

    RULE_integer = 0
    RULE_complex_number = 1

    ruleNames =  [ u"integer", u"complex_number" ]

    EOF = Token.EOF
    DIRECTION=1
    HEADER=2
    ENDER=3
    HORIZONTAL_SEPARATOR=4
    VERTICAL_SEPARATOR=5
    LIST_SEPARATOR=6
    WALL=7
    EMPTY_HALLWAY=8
    EMPTY_ROOM=9
    DIGIT=10
    INTEGER=11
    FLOAT=12
    IMAG_NUMBER=13
    SIGN=14
    CHARACTER_LOW=15
    CHARACTER_UP=16
    CHARACTER=17
    TEXT=18
    ROOM_ID=19
    HALLWAY_ID=20
    REFERENCE=21
    WS=22
    UNIVERSAL_SEPARATOR=23
    COMMENT=24
    LINE_COMMENT=25

    def __init__(self, input, output=sys.stdout):
        super(QrogueBasicsParser, self).__init__(input, output=output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class IntegerContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueBasicsParser.IntegerContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self):
            return self.getToken(QrogueBasicsParser.DIGIT, 0)

        def HALLWAY_ID(self):
            return self.getToken(QrogueBasicsParser.HALLWAY_ID, 0)

        def INTEGER(self):
            return self.getToken(QrogueBasicsParser.INTEGER, 0)

        def getRuleIndex(self):
            return QrogueBasicsParser.RULE_integer

        def enterRule(self, listener):
            if hasattr(listener, "enterInteger"):
                listener.enterInteger(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitInteger"):
                listener.exitInteger(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitInteger"):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)




    def integer(self):

        localctx = QrogueBasicsParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_integer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 4
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QrogueBasicsParser.DIGIT) | (1 << QrogueBasicsParser.INTEGER) | (1 << QrogueBasicsParser.HALLWAY_ID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Complex_numberContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QrogueBasicsParser.Complex_numberContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IMAG_NUMBER(self):
            return self.getToken(QrogueBasicsParser.IMAG_NUMBER, 0)

        def SIGN(self, i=None):
            if i is None:
                return self.getTokens(QrogueBasicsParser.SIGN)
            else:
                return self.getToken(QrogueBasicsParser.SIGN, i)

        def integer(self):
            return self.getTypedRuleContext(QrogueBasicsParser.IntegerContext,0)


        def FLOAT(self):
            return self.getToken(QrogueBasicsParser.FLOAT, 0)

        def getRuleIndex(self):
            return QrogueBasicsParser.RULE_complex_number

        def enterRule(self, listener):
            if hasattr(listener, "enterComplex_number"):
                listener.enterComplex_number(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitComplex_number"):
                listener.exitComplex_number(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitComplex_number"):
                return visitor.visitComplex_number(self)
            else:
                return visitor.visitChildren(self)




    def complex_number(self):

        localctx = QrogueBasicsParser.Complex_numberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_complex_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 7
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QrogueBasicsParser.SIGN:
                self.state = 6
                self.match(QrogueBasicsParser.SIGN)


            self.state = 18
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QrogueBasicsParser.IMAG_NUMBER]:
                self.state = 9
                self.match(QrogueBasicsParser.IMAG_NUMBER)
                pass
            elif token in [QrogueBasicsParser.DIGIT, QrogueBasicsParser.INTEGER, QrogueBasicsParser.FLOAT, QrogueBasicsParser.HALLWAY_ID]:
                self.state = 12
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [QrogueBasicsParser.DIGIT, QrogueBasicsParser.INTEGER, QrogueBasicsParser.HALLWAY_ID]:
                    self.state = 10
                    self.integer()
                    pass
                elif token in [QrogueBasicsParser.FLOAT]:
                    self.state = 11
                    self.match(QrogueBasicsParser.FLOAT)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 16
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QrogueBasicsParser.SIGN:
                    self.state = 14
                    self.match(QrogueBasicsParser.SIGN)
                    self.state = 15
                    self.match(QrogueBasicsParser.IMAG_NUMBER)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





